# accords-platform

./: ..ap-err  .gitignore  0  AUTHORS  AppManifest0.xsd  Certificates.crt  Makefile  Makefile.am  README  README.OpenBSD-5.2  accords.spec.in  accounts.xml  analyse.css  autogen.sh  build.debian  build.linux  clean  coips.xml  compatibleone-paprocci-java.spec.in  compatibleone.spec.in  compmanager.c  configure.ac  corcs.xsd  cords.xsd  cordstypes.xsd  debian.build  easiclouds.xsd  easitypes.xsd  example1.xml  example2.xml  example3.xml  example4.xml  example5.xml  federation.xsd  find-missing-files-after-dist.sh  go.sh  index.html  install.debian  install.linux  linux.build  (+20 more)
azprocci/: Makefile.am  azcontract.c  azprocci.c  certificate.c  configure.ac  procciaz.c
azprocci/src/: Makefile.am  Makefile.in  azcontract.c  azprocci.c  certificate.c  certificate.h  procciaz.c
backend/: Makefile.am  backend_common.c  backend_common.h  backend_profiling.c  backend_profiling.h  link_backend.c  link_backend.h  publication_riak_backend.c  publication_riak_backend.h  riak_backend.c  riak_backend.h
broker/: Makefile.am  broker.c  broker.h  brokerplan.c  brokerprovider.c  brokerservice.c  configure.ac
broker/src/: Makefile.am  Makefile.in  broker.c  broker.h  brokerplan.c  brokerprovider.c  brokerservice.c
cocarrier/: Makefile.am  azclient.h  co_json.c  co_json.h  configure.ac  dataelement.h  eucahack.c  hmac_sha2.c  hmac_sha2.h  json.c  onclient.c  onclient.h  osclient.c  osclient.h  sha2.c  sha2.h
cocarrier/src/: Makefile.am  Makefile.in  azclient.c  azclient.h  azconfig.h  dataelement.c  dcclient.c  dcclient.h  ec2client.py  hmac_sha2.c  hmac_sha2.h  json.c  json.h  list.c  list.h  onclient.c  onclient.h  onconfig.h  osclient.c  osclient.h  osconfig.c  paclient.c  paclient.h  sha2.c  sha2.h
coco/: Makefile.am
cocspi/: Makefile.am  cspi.c  cspi.h
cocspi/src/: Makefile.am  cspi.c  cspi.h
coeasy/: Makefile.am  coeasy.c
coeasy/src/: Makefile.am  coeasy.c  coeasy.h  easiclouds_application.c  easiclouds_application.h  easiclouds_connection.c  easiclouds_connection.h  easiclouds_description.c  easiclouds_description.h  easiclouds_extra.c  easiclouds_extra.h  easiclouds_input.c  easiclouds_input.h  easiclouds_instance.c  easiclouds_instance.h  easiclouds_keypair.c  easiclouds_keypair.h  easiclouds_link.c  easiclouds_link.h  easiclouds_metadata.c  easiclouds_metadata.h  easiclouds_model.c  easiclouds_model.h  easiclouds_node.c  easiclouds_node.h  easiclouds_output.c  easiclouds_output.h  easiclouds_parameters.c  easiclouds_parameters.h  easiclouds_postconf.c  easiclouds_postconf.h  easiclouds_server.c  easiclouds_server.h  occieasiclouds_application.c  occieasiclouds_connection.c  occieasiclouds_description.c  occieasiclouds_extra.c  occieasiclouds_input.c  occieasiclouds_instance.c  occieasiclouds_keypair.c  (+8 more)
coees/: Makefile.am  configure.ac
coees/src/: Makefile.am  coees.c
coidms/: Makefile.am
coidms/src/: Makefile.am  (+1 more)
command/: Makefile.am  colog.c  command.c  command.h  configure.ac  corcasynch.c  corcsoap.c  corcsthread.c  corcsthread.h  corcwsdl.c  corcxml.c  soapapi.c
comodel/: Makefile.am  allocate.h  comodel.c  gencomp.c  genoccisql.c  genoccixml.c  item.h  license.h  occirest.c  occisql.c  occisql.h  strukt.c  struktsql.c  stubmysql.c  stubmysql.h
comons/: Makefile.am  comons.c  comonsconnection.c  comonsevent.c  comonsmonitor.c  comonssession.c  configure.ac
conagios/: Makefile.am  conagios.c
conets/: Makefile.am  Makefile.in  conets.c  conetsdomain.c  conetsengine.c  conetsengine.h  conetsip.c  configure.ac
coobas/: Makefile.am  configure.ac  coobas.c
copaas/: Makefile.am  copaas.c
copabr/: Makefile.am  cb.c  cb.h  configure.ac  cosacsctrl.c  cosacsctrl.h  cp.c  cp.h  cpcnv.c  cpxsd.c  cpxsd.h  csa.c  csa.h  cse.h  csp.h
cords/: Makefile.am  backend_common.h  configure.ac  cords.h  cords2occi.c  cordsbase.c  cordselements.h  cordsocci.c  operation.c  publication_riak_backend.c  publication_riak_backend.h
cosql/: Makefile.am  occisql.c  occisql.h  stubmysql.c  stubmysql.h
dodo/: Makefile.am
dummyprocci/: Makefile.am  dummyclient.c  dummyclient.h  dummycontract.c  dummycontract.h  dummyprocci.c
example/: Makefile.am  example.c  example_contract.c  example_contract.h
ezvm/: Makefile.am  ezvm.c  ezvm.h
manifests/: Makefile.am  accords-azprocci.xml  accords-broker.xml  accords-coees.xml  accords-coes.xml  accords-coips.xml  accords-comons.xml  accords-conets.xml  accords-coobas.xml  accords-cosched.xml  accords-coss.xml  accords-dcprocci.xml  accords-ezvm.xml  accords-onprocci.xml  accords-osocciprocci.xml  accords-osprocci.xml  accords-paprocci.xml  accords-parser.xml  accords-platform.sh  accords-platform.xml  accords-procci.xml  accords-provisioning.sh  accords-provisioning.xml  accords-publisher.xml  accords-slam.xml  blue.css  build-config  build-config-cool-secure  build-config-cool-unsafe  build-config-cosacs  build-config-cosacs-secure  build-config-cosacs-unsafe  build-config-secure  build-config-unsafe  build-configm  build-guarantee  build-install  build-install.in  build-manifest  build-manifest-publisher  (+53 more)
manpages/: Makefile.am  accords-config.1  accords.1  accords.7  azprocci.1  base.1  broker.1  cnprocci.1  co-broker.1  co-check.1  co-command.1  co-parser.1  co-platform.1  co-provider.1  co-provision.1  co-resolver.1  co-start.1  co-status.1  co-stop.1  coeasy.1  coees.1  coips.1  command.1  comons.1  compatibleone.7  conagios.1  conets.1  coobas.1  cool.1  copaas.1  cops.1  cosacs-client.1  cosacs.1  cosched.1  coss.1  dcprocci.1  example.1  eziprocci.1  ezvm.1  fileserver.1  (+55 more)
occi/: Makefile.am  accords.h  configure.ac  cordsocci.c  kindnode.c  kindnode.h  linknode.c  linknode.h  occi.c  occi.h  occiact.c  occiact.h  occibuilder.h  occicat.c  occicat.h  occijson.c  occimixin.c  occipar.c  occipar.h  occipub.h  osonocci.c  pubocci.c
orgabas/: Makefile.am  ldapclient.c  ldapclient.h  ldapuser.c  orga-client.xml  orgabas.c  orgaccount.c  orgatrans.c
paasprocci/: Makefile.am  paasclient.h  paascontract.c  paasprocci.c
(+1901 files in other folders)
